--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/resources/css/styles.css">
     <title>AAS-Tracker</title>
 </head>
 <body>
-    <!-- Boiler plate -->
+<!-- Option Select to continue -->
+    <div class="container">
+        <h1>AAS-Tracker</h1>
+        <p>Welcome, <span style="font-weight: 900;">User</span> Choose a user type to continue.</p>
+        <form action="">
+            <a href="./resources/pages/adminlogin.html"><input type="button" value="Admin" class="login-btn"></a>
+            <a href="./resources/pages/studentlogin.html"><input type="button" value="Student" class="login-btn"></a>
+        </form>
+    </div>
+<!-- Option Select to continue end -->
+
 </body>
 </html>
