chore: created signup/login page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <form action="">
             <a href="./resources/pages/adminlogin.html"><input type="button" value="Admin" class="login-btn"></a>
             <a href="./resources/pages/studentlogin.html"><input type="button" value="Student" class="login-btn"></a>
+            <a href="./resources/pages/dashboard.html"><input type="button" value="Dashboard" class="login-btn"></a>
         </form>
     </div>
 <!-- Option Select to continue end -->
