--- a/resources/pages/adminlogin.html
+++ b/resources/pages/adminlogin.html
@@ -15,6 +15,7 @@
             <input type="text" placeholder="ID Number">
             <input type="text" placeholder="Password">
             <input type="submit" value="LOGIN" class="login-btn">
+            <input type="submit" value="SIGN IN USING GOOGLE" class="login-btn">
         </form>
     </div>
 <!-- Admin login end -->
