--- a/resources/pages/teacherlogin.html
+++ b/resources/pages/teacherlogin.html
@@ -13,7 +13,7 @@
         <p>Welcome here, <span style="font-weight: 900;">Teacher</span> Login to continue.</p>
         <form action="">
             <input type="text" placeholder="ID Number">
-            <input type="text" placeholder="Password">
+            <input type="password" placeholder="Password">
             <input type="submit" value="LOGIN" class="login-btn">
         </form>
     </div>
