chore: working on sidebar items

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/resources/css/styles.css">
+    <link rel="stylesheet" href="./resources/css/styles.css">
     <title>AAS-Tracker</title>
 </head>
 <body>
 <!-- Option Select to continue -->
     <div class="container">
+        <img src="./resources/images/logo.png" alt="logo" class="logo">
         <h1>AAS-Tracker</h1>
         <p>Welcome, <span style="font-weight: 900;">User</span> Choose a user type to continue.</p>
         <form action="">
