--- a/resources/pages/adminlogin.html
+++ b/resources/pages/adminlogin.html
@@ -9,6 +9,7 @@
 <body>
 <!-- Admin login -->
     <div class="container">
+        <img src="../images/logo.png" alt="logo" class="logo">
         <h1>AAS-Tracker</h1>
         <p>Welcome here, <span style="font-weight: 900;">Admin</span> Login to continue.</p>
         <form action="">
