--- a/resources/pages/studentlogin.html
+++ b/resources/pages/studentlogin.html
@@ -9,6 +9,7 @@
 <body>
 <!-- Student login -->
     <div class="container">
+        <img src="../images/logo.png" alt="logo" class="logo">
         <h1>AAS-Tracker</h1>
         <p>Welcome here, <span style="font-weight: 900;">Student</span> Login to continue.</p>
         <form action="">
